--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prompts": "2.4.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-calendar": "^3.3.1",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.5",
